--- a/ProjectUbuild/Views/Home/Index.cshtml
+++ b/ProjectUbuild/Views/Home/Index.cshtml
@@ -54,11 +54,11 @@
                 <div class="row">
                     <div class="col-sm-offset-1 text-center col-sm-10">
                         <h1 class="mb40 mb-xs-16 large">Your Land</h1>
-                        <h6 class="uppercase mb16">Let us help you own a land</h6>
+                        <h6 class="uppercase mb16">Get a loan to finance your Foundation</h6>
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
-                        <a class="btn btn-lg btn-filled" href="/fullhouse/index">Apply now</a>
+                        <a class="btn btn-lg btn-filled" href="/loan/apply?loanType=2">Apply now</a>
                     </div>
                 </div>
                 <!--end of row-->
@@ -77,7 +77,7 @@
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
-                        <a class="btn btn-lg btn-filled" href="#">Start Exploring</a>
+                        <a class="btn btn-lg btn-filled" href="/fullhouse/index">Start Exploring</a>
                     </div>
                 </div>
                 <!--end of row-->
@@ -91,8 +91,8 @@
             <div class="container v-align-transform">
                 <div class="row">
                     <div class="col-sm-offset-1 text-center col-sm-10">
-                        <h1 class="mb40 mb-xs-16 large">Your Walling</h1>
-                        <h6 class="uppercase mb16">Let us help you put up your walls</h6>
+                        <h1 class="mb40 mb-xs-16 large">Block Work to Roofing Level</h1>
+                        <h6 class="uppercase mb16">Get a loan to finance your building, from block work to roofing</h6>
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
@@ -110,8 +110,8 @@
             <div class="container v-align-transform">
                 <div class="row">
                     <div class="col-sm-offset-1 text-center col-sm-10">
-                        <h1 class="mb40 mb-xs-16 large">Your Roofing</h1>
-                        <h6 class="uppercase mb16">Get help to roof your house</h6>
+                        <h1 class="mb40 mb-xs-16 large">Your Finishing</h1>
+                        <h6 class="uppercase mb16">Get a loan to finance your home finishing</h6>
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
@@ -130,7 +130,7 @@
                 <div class="row">
                     <div class="col-sm-offset-1 text-center col-sm-10">
                         <h1 class="mb40 mb-xs-16 large">Fixtures and Fittings</h1>
-                        <h6 class="uppercase mb16">Get a loan to finance your Fixtures and fittings  </h6>
+                        <h6 class="uppercase mb16">Get a loan to finance your home Fixtures and Fittings</h6>
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
