--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -67,8 +67,9 @@
                     }
                     else
                     {
-                    @Html.ActionLink("Log In", "Login", "Account", null, new { @class = "btn btn-sm btn-filled", style = "margin-right:5px" })
-                    @Html.ActionLink("Market Place", "Login", "Account", null, new { @class = "btn btn-sm ", style = "border:1px solid #f35958" })
+                       @Html.ActionLink("Log In", "Login", "Account", null, new { @class = "btn btn-sm btn-filled", style = "margin-right:5px" })
+    <a href="https://www.directpay.online/login" class="btn btn-sm" style="border:1px solid #f35958">Market Place</a>
+@*                    @Html.ActionLink("Market Place", "Login", "Account", null, new { @class = "btn btn-sm ", style = "border:1px solid #f35958" })*@
                     }
 
 
