aded phone number to layout

--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
             <div class="nav-utility">
                 <div class="module left hidden-sm hidden-xs">
                     <i class="fa fa-phone ">&nbsp;</i>
-                    <span class="sub">Call Us Now : (+233) 0274121780</span>
+                    <span class="sub">Call Us Now : (+233) 054 587 7299</span>
 
                 </div>
                 <div class="module left hidden-sm hidden-xs">
