--- a/ProjectUbuild/Views/Account/ResetPassword.cshtml
+++ b/ProjectUbuild/Views/Account/ResetPassword.cshtml
@@ -21,6 +21,7 @@
                     {
                         @Html.AntiForgeryToken()
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(m=>m.Code)
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
