added phase type to loan type

--- a/ProjectUbuild/Views/FullHouse/Index.cshtml
+++ b/ProjectUbuild/Views/FullHouse/Index.cshtml
@@ -112,9 +112,9 @@
 
                             <div class="rh_prop_card__priceLabel row text-center">
 
-                                <h4 class="rh_prop_card__status">
+                                @*<h4 class="rh_prop_card__status">
                                     For Sale
-                                </h4>
+                                </h4>*@
                                 <!-- /.rh_prop_card__type -->
                                 <h3 class="rh_prop_card__price text-success">
                                     @design.ISOCode @design.BareDesignCost
