--- a/ProjectUbuild/Views/Home/Index.cshtml
+++ b/ProjectUbuild/Views/Home/Index.cshtml
@@ -54,11 +54,11 @@
                 <div class="row">
                     <div class="col-sm-offset-1 text-center col-sm-10">
                         <h1 class="mb40 mb-xs-16 large">Your Land</h1>
-                        <h6 class="uppercase mb16">Get a loan to finance your Foundation</h6>
+                        <h6 class="uppercase mb16">Get a loan to finance your Land</h6>
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
-                        <a class="btn btn-lg btn-filled" href="/loan/apply?loanType=2">Apply now</a>
+                        <a class="btn btn-lg btn-filled" href="/loan/apply?loanType=Phase&phaseType=1">Apply now</a>
                     </div>
                 </div>
                 <!--end of row-->
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class="col-sm-offset-1 text-center col-sm-10">
                         <h1 class="mb40 mb-xs-16 large">Your Foundation</h1>
-                        <h6 class="uppercase mb16">Get help to complete your foundation</h6>
+                        <h6 class="uppercase mb16">Get a Loan to finance your 'Foundation'</h6>
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
@@ -91,7 +91,7 @@
             <div class="container v-align-transform">
                 <div class="row">
                     <div class="col-sm-offset-1 text-center col-sm-10">
-                        <h1 class="mb40 mb-xs-16 large">Block Work to Roofing Level</h1>
+                        <h1 class="mb40 mb-xs-16 large">Your Block Work to Roofing</h1>
                         <h6 class="uppercase mb16">Get a loan to finance your building, from block work to roofing</h6>
                         @*<p class="lead mb40">
                             Slider 3
