--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -95,13 +95,14 @@ else if (route.IndexOf("/profile", StringComparison.Ordinal) > -1)
 {
 
     <script src="~/Scripts/app/update-profile.conftroller.js"></script>
+    <script src="~/assets/js/form_elements.js"></script>
 }
 else if (route == "/loan/apply")
 {
     <script src="~/Scripts/app/loanapplication.controller.js"></script>
 }
-else if (route.IndexOf("/fullhouse/housedesign", StringComparison.Ordinal) >-1)
-{ 
+else if (route.IndexOf("/fullhouse/housedesign", StringComparison.Ordinal) > -1)
+{
     <script src="~/Scripts/app/HouseDesign.js"></script>
 }
 
