--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -14,6 +14,9 @@
 <script src="~/assets/plugins/pace/pace.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/modernizr.custom.js" type="text/javascript"></script>
 <script src="~/assets/plugins/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
+<script src="~/assets/plugins/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
+<script src="~/assets/plugins/jquery-fileupload/jquery.iframe-transport.js"></script>
+<script src="~/assets/plugins/jquery-fileupload/jquery.fileupload.js"></script>
 <script src="~/assets/plugins/tether/js/tether.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/jquery/jquery-easy.js" type="text/javascript"></script>
